// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UserNameWidget when isReadOnly is FALSE should render UserNameWidget correctly 1`] = `
<div
  className="user_name_widget"
>
  <div
    className="user_name_widget__legal_name"
  >
    <div
      className="user_name_widget__legal_name_title"
    >
      Full Name
    </div>
    <div
      className="user_name_widget__legal_name_inputs"
    >
      <input
        name="firstName"
        onBlur={[MockFunction]}
        onChange={[Function]}
        placeholder="First Name"
        readOnly={false}
        type="text"
        value="Johnny"
      />
      <input
        name="middleName"
        onChange={[Function]}
        placeholder="Middle Name"
        readOnly={false}
        type="text"
        value="Middleton"
      />
      <input
        name="lastName"
        onBlur={[MockFunction]}
        onChange={[Function]}
        placeholder="Last Name"
        readOnly={false}
        type="text"
        value="Appleseed"
      />
    </div>
  </div>
  <div
    className="user_name_widget__display_name"
  >
    <div
      className="user_name_widget__display_name_title"
    >
      Display Name
    </div>
    <div
      className="user_name_widget__display_name_inputs"
    >
      <input
        name="displayName"
        onChange={[Function]}
        placeholder="Display Name"
        readOnly={false}
        type="text"
        value="Johnny Appleseed"
      />
    </div>
  </div>
  <div
    className="user_name_widget__button"
  >
    <button
      disabled={false}
      onClick={[Function]}
    >
      Update User Info
    </button>
  </div>
</div>
`;

exports[`UserNameWidget when isReadOnly is TRUE should render UserNameWidget correctly 1`] = `
<div
  className="user_name_widget"
>
  <div
    className="user_name_widget__legal_name"
  >
    <div
      className="user_name_widget__legal_name_title"
    >
      Full Name
    </div>
    <div
      className="user_name_widget__legal_name_inputs"
    >
      <input
        name="firstName"
        onBlur={[MockFunction]}
        onChange={[Function]}
        placeholder="First Name"
        readOnly={true}
        type="text"
        value="Johnny"
      />
      <input
        name="middleName"
        onChange={[Function]}
        placeholder="Middle Name"
        readOnly={true}
        type="text"
        value="Middleton"
      />
      <input
        name="lastName"
        onBlur={[MockFunction]}
        onChange={[Function]}
        placeholder="Last Name"
        readOnly={true}
        type="text"
        value="Appleseed"
      />
    </div>
  </div>
  <div
    className="user_name_widget__display_name"
  >
    <div
      className="user_name_widget__display_name_title"
    >
      Display Name
    </div>
    <div
      className="user_name_widget__display_name_inputs"
    >
      <input
        name="displayName"
        onChange={[Function]}
        placeholder="Display Name"
        readOnly={true}
        type="text"
        value="Johnny Appleseed"
      />
    </div>
  </div>
</div>
`;
